add all resources.

--- a/运用设计.md
+++ b/运用设计.md
@@ -1,6 +1,8 @@
-# 数据字典  
+# 运用设计
 
-## school表
+## 数据字典
+
+#### school表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -13,7 +15,7 @@
 
 
 
-## user_info表
+#### user_info表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -34,7 +36,7 @@
 
 
 
-## course表
+#### course表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -50,7 +52,7 @@
 
 
 
-## score\_rule表
+#### score\_rule表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -63,7 +65,7 @@
 | three\_point\_percentage | tinyint(3) unsigned | YES |   | 3分占整体比例 |
 
 
-## class­\_info表
+#### class­\_info表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -77,7 +79,7 @@
 | score\_rule\_id | bigint(20) unsigned | YES |   | 评分规则 |
 
 
-## course\_selection表
+#### course\_selection表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -89,7 +91,7 @@
 
 
 
-## attendance表
+#### attendance表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -100,7 +102,7 @@
 | class\_id | bigint(20) unsigned | NO |   |   |
 | attendance\_status | tinyint(3) unsigned | YES |   | 点名状态 |
 
-## seminar表
+#### seminar表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -116,7 +118,7 @@
 
 
 
-## topic表
+#### topic表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -129,7 +131,7 @@
 | group\_student\_limit | tinyint(3) unsigned | NO |   | 组内人数限制 |
 | seminar\_id | bigint(20) unsigned | NO |   | 所属讨论课id |
 
-## fix\_group表
+#### fix\_group表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -140,7 +142,7 @@
 
 
 
-## fix\_group\_member表
+#### fix\_group\_member表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -153,7 +155,7 @@
 
 
 
-## seminar\_group表
+#### seminar\_group表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -166,7 +168,7 @@
 
 
 
-## seminar\_group\_member表
+#### seminar\_group\_member表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -179,7 +181,7 @@
 
 
 
-## seminar\_group\_topic表
+#### seminar\_group\_topic表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -192,7 +194,7 @@
 
 
 
-## student\_score\_group表
+#### student\_score\_group表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
@@ -202,3 +204,11 @@
 | student\_id | bigint(20) unsigned | YES |   |   |
 | seminar\_group\_topic | bigint(20) unsigned | YES |   | 课堂小组话题 |
 | grade | tinyint(3) unsigned | YES |   | 成绩 |
+
+
+## 安全设计
+
+本数据库系统采用安全的用户名加口令方式登录。使用者在使用此数据库时，由于不同的访问者的登陆号码不同，且增加了密码设置，故相当于对于数据的访问设置了权限，所以数据可以说是安全的。用户名的权限限制为只能进行基本的增删改查数据功能。数据库通过区分不同的访问者、不同的访问类型和不同的数据对象，进行分别对待而获得的数据库安全保密设计考虑。
+
+管理员的权限最大，可以控制所有的数据。数据库由专门数据库管理用员对数据库操作，需要注意以下几项安全问题：
+访问安全 、网络安全 、传输安全 、备份安全 、数据安全。
