--- a/运用设计.md
+++ b/运用设计.md
@@ -139,6 +139,7 @@
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | class\_id | bigint(20) unsigned | YES |   | 所属班级 |
+| leader | bigint(20) | YES |   | 组长id |
 
 
 
@@ -165,6 +166,8 @@
 | seminar\_id | bigint(20) unsigned | YES |   |   |
 | report\_grade | int(10) unsigned | YES |   | 报告成绩 |
 | report | varchar(5000) | YES |   | 提交的报告 |
+| class_id | bigint(20) unsigned | YES |   | 班级编号 |
+| leader | bigint(20) unsigned | YES |   | 组长编号 |
 
 
 
@@ -204,6 +207,22 @@
 | student\_id | bigint(20) unsigned | YES |   |   |
 | seminar\_group\_topic | bigint(20) unsigned | YES |   | 课堂小组话题 |
 | grade | tinyint(3) unsigned | YES |   | 成绩 |
+
+
+
+#### location表
+
+| 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
+| --- | --- | --- | --- | --- |
+| id | bigint(20) | NO | PRI |   |
+| gmt\_create | datetime | YES |   | 表示记录创建时间 |
+| gmt\_modified | datetime | YES |   | 表示最近修改时间 |
+| class_id | bigint(20) | YES |   | 班级编号 |
+| seminar_id | bigint(20)| YES |   | 讨论课编号，与班级编号一起唯一确定一堂课 |
+| longitude | decimal | YES |   | 经度 |
+| latitude | decimal | YES |   | 纬度 |
+| status | tinyint unsigned | YES |    | 签到状态，0表示签到结束，1表示正在签到 |
+
 
 
 ## 安全设计
