--- a/结构设计.md
+++ b/结构设计.md
@@ -21,9 +21,10 @@
 | class               |<br/>id<br/>name<br/>course_id<br/>site<br/>time<br/>score_rule_id                                                               | 包含班级信息，具体有：<br/>班级编号<br/>班级名称<br/>课程名称<br/>上课地点<br/>上课时间<br/>评分规则                                              |
 | seminar             |<br/>id<br/>name<br/>description<br/>course_id<br/>is_fixed<br/>start_time<br/>end_time                                              | 包含讨论课信息，具体有：<br/>讨论课编号<br/>讨论课名称<br/>讨论课说明<br/>所属课程<br/>分组方式（随机分组/固定分组）<br/>开始时间<br/>结束时间        |
 | topic               |<br/>id<br/>name<br/>description<br/>group_number_limit<br/>group_student_limit<br/>seminar_id                                   | 包含话题信息，具体有<br/>话题编号<br/>话题名称<br/>话题说明<br/>小组数量上限<br/>组内人数限制<br/>所属讨论课                                      |
-| fix_group           |<br/>id<br/>class_id                                                                                             | 包含固定小组信息，具体有<br/>固定小组编号<br/>所属班级                                                                           |
-| seminar_group       |<br/>id<br/>report_grade<br/>report                                                                                  | 包含讨论课小组信息，具体有<br/>讨论课小组编号<br/>报告评分<br/>报告文档                                                               |
+| fix_group           |<br/>id<br/>class_id<br/>leader                                                                                  | 包含固定小组信息，具体有<br/>固定小组编号<br/>所属班级<br/>组长编号                                  |
+| seminar_group       |<br/>id<br/>seminar_id<br/>report_grade<br/>report<br/>class_id<br/>leader                                                               | 包含讨论课小组信息，具体有<br/>讨论课小组编号<br/>讨论课编号<br/>报告评分<br/>报告文档<br/>班级编号<br/>组长编号                   |
 | student_score_group |<br/>id<br/>student_id<br/>seminar_group_topic<br/>grade                                                                 | 包含学生给小组打分的信息，具体有<br/>打分编号<br/>学生<br/>讨论课小组<br/>分数                                                            |
+| location | <br/>id<br/>class_id<br/>seminar_id<br/>longitude<br/>latitude<br/>status | 包含教师位置信息，签到时用<br/>位置编号<br/>班级编号<br/>讨论课编号<br/>经度<br/>纬度<br/>当前签到状态，0为签到结束，1为正在签到 | 
 
 ## 3. 关系设计
 
