update sql file and data dictionary

--- a/运用设计.md
+++ b/运用设计.md
@@ -6,7 +6,7 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | school\_name | varchar(20) | NO |   | 学校名称 |
@@ -19,7 +19,7 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | phone\_number | char(11) | NO |   |   |
@@ -27,7 +27,7 @@
 | icon | varchar(50) | YES |   | 头像 |
 | user\_password | varchar(16) | NO |   |   |
 | user\_name | varchar(10) | YES |   |   |
-| school\_id | bigint(20) unsigned | YES |   | 所属学校的id |
+| school\_id | bigint unsigned | YES |   | 所属学校的id |
 | is\_male | tinyint(1) unsigned | YES |   | 性别 |
 | is\_student | tinyint(1) unsigned | YES |   | 身份（老师，学生） |
 | number | varchar(20) | YES |   | 教工号/学号 |
@@ -40,15 +40,15 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | course\_name | varchar(30) | NO |   |   |
 | start\_date | date | YES |   | 开始时间 |
 | end\_date | date | YES |   | 结束时间 |
-| teacher\_id | bigint(20) unsigned | YES |   | 任课老师的id |
+| teacher\_id | bigint unsigned | YES |   | 任课老师的id |
 | description | varchar(50) | YES |   | 课程介绍 |
-| score\_rule\_id | bigint(20) unsigned | YES |   | 评分规则 |
+| score\_rule\_id | bigint unsigned | YES |   | 评分规则 |
 
 
 
@@ -56,38 +56,38 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| report | tinyint(3) unsigned | YES |   | 报告占期末比例 |
-| five\_point\_percentage | tinyint(3) unsigned | YES |   | 5分占整体比例 |
-| four\_point\_percentage | tinyint(3) unsigned | YES |   | 4分占整体比例 |
-| three\_point\_percentage | tinyint(3) unsigned | YES |   | 3分占整体比例 |
+| report | tinyint unsigned | YES |   | 报告占期末比例 |
+| five\_point\_percentage | tinyint unsigned | YES |   | 5分占整体比例 |
+| four\_point\_percentage | tinyint unsigned | YES |   | 4分占整体比例 |
+| three\_point\_percentage | tinyint unsigned | YES |   | 3分占整体比例 |
 
 
 #### class­\_info表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | class\_name | varchar(255) | NO |   |   |
-| course\_id | bigint(20) unsigned | YES |   | 所属课程 |
+| course\_id | bigint unsigned | YES |   | 所属课程 |
 | site | varchar(255) | YES |   | 上课地点 |
 | class\_time | varchar(255) | YES |   | 上课时间 |
-| score\_rule\_id | bigint(20) unsigned | YES |   | 评分规则 |
+| score\_rule\_id | bigint unsigned | YES |   | 评分规则 |
 
 
 #### course\_selection表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| class\_id | bigint(20) unsigned | YES |   | 课程下班级id |
-| student\_id | bigint(20) unsigned | YES |   | 课程下学生id |
+| class\_id | bigint unsigned | YES |   | 课程下班级id |
+| student\_id | bigint unsigned | YES |   | 课程下学生id |
 
 
 
@@ -95,24 +95,24 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| student\_id | bigint(20) unsigned | NO |   |   |
-| class\_id | bigint(20) unsigned | NO |   |   |
-| attendance\_status | tinyint(3) unsigned | YES |   | 点名状态 |
+| student\_id | bigint unsigned | NO |   |   |
+| class\_id | bigint unsigned | NO |   |   |
+| attendance\_status | tinyint unsigned | YES |   | 点名状态 |
 
 #### seminar表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | seminar\_name | varchar(300) | NO |   |   |
 | seminar\_description | varchar(5000) | YES |   | 讨论课描述 |
-| course\_id | bigint(20) unsigned | YES |   | 所属课程 |
-| is\_fixed | tinyint(3) unsigned | YES |   | 分组方式 |
+| course\_id | bigint unsigned | YES |   | 所属课程 |
+| is\_fixed | tinyint unsigned | YES |   | 分组方式 |
 | start\_time | date | NO |   |   |
 | end\_time | date | NO |   |   |
 
@@ -122,24 +122,24 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) unsigned | NO | PRI |   |
+| id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | topic\_name | varchar(300) | NO |   |   |
 | description | varchar(5000) | YES |   | 话题详细描述 |
-| group\_number\_limit | tinyint(3) unsigned | NO |   | 组数限制 |
-| group\_student\_limit | tinyint(3) unsigned | NO |   | 组内人数限制 |
-| seminar\_id | bigint(20) unsigned | NO |   | 所属讨论课id |
+| group\_number\_limit | tinyint unsigned | NO |   | 组数限制 |
+| group\_student\_limit | tinyint unsigned | NO |   | 组内人数限制 |
+| seminar\_id | bigint unsigned | NO |   | 所属讨论课id |
 
 #### fix\_group表
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) | NO | PRI |   |
+| id | bigint | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| class\_id | bigint(20) unsigned | YES |   | 所属班级 |
-| leader | bigint(20) | YES |   | 组长id |
+| class\_id | bigint unsigned | YES |   | 所属班级 |
+| leader | bigint | YES |   | 组长id |
 
 
 
@@ -147,12 +147,12 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) | NO | PRI |   |
+| id | bigint | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| fix\_group\_id | bigint(20) unsigned | YES |   | 固定小组编号 |
-| student\_id | bigint(20) unsigned | YES |   |   |
-| leader | bigint(20) unsigned | YES |   | 队长 |
+| fix\_group\_id | bigint unsigned | YES |   | 固定小组编号 |
+| student\_id | bigint unsigned | YES |   |   |
+| leader | bigint unsigned | YES |   | 队长 |
 
 
 
@@ -160,14 +160,14 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) | NO | PRI |   |
+| id | bigint | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| seminar\_id | bigint(20) unsigned | YES |   |   |
-| report\_grade | int(10) unsigned | YES |   | 报告成绩 |
+| seminar\_id | bigint unsigned | YES |   |   |
+| report\_grade | int unsigned | YES |   | 报告成绩 |
 | report | varchar(5000) | YES |   | 提交的报告 |
-| class_id | bigint(20) unsigned | YES |   | 班级编号 |
-| leader | bigint(20) unsigned | YES |   | 组长编号 |
+| class_id | bigint unsigned | YES |   | 班级编号 |
+| leader | bigint unsigned | YES |   | 组长编号 |
 
 
 
@@ -175,12 +175,12 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) | NO | PRI |   |
+| id | bigint | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| seminar\_group\_id | bigint(20) unsigned | YES |   | 课堂小组编号 |
-| student\_id | bigint(20) unsigned | YES |   |   |
-| is\_leader | tinyint(3) unsigned | YES |   | 是否为队长 |
+| seminar\_group\_id | bigint unsigned | YES |   | 课堂小组编号 |
+| student\_id | bigint unsigned | YES |   |   |
+| is\_leader | tinyint unsigned | YES |   | 是否为队长 |
 
 
 
@@ -188,12 +188,12 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) | NO | PRI |   |
+| id | bigint | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| topic\_id | bigint(20) unsigned | YES |   | 所选择的话题id |
-| seminar\_group\_id | bigint(20) unsigned | YES |   | 课堂小组编号 |
-| presentation\_grade | int(10) unsigned | YES |   | 讨论课成绩 |
+| topic\_id | bigint unsigned | YES |   | 所选择的话题id |
+| seminar\_group\_id | bigint unsigned | YES |   | 课堂小组编号 |
+| presentation\_grade | int unsigned | YES |   | 讨论课成绩 |
 
 
 
@@ -201,12 +201,12 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) | NO | PRI |   |
+| id | bigint | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| student\_id | bigint(20) unsigned | YES |   |   |
-| seminar\_group\_topic | bigint(20) unsigned | YES |   | 课堂小组话题 |
-| grade | tinyint(3) unsigned | YES |   | 成绩 |
+| student\_id | bigint unsigned | YES |   |   |
+| seminar\_group\_topic | bigint unsigned | YES |   | 课堂小组话题 |
+| grade | tinyint unsigned | YES |   | 成绩 |
 
 
 
@@ -214,13 +214,13 @@
 
 | 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
 | --- | --- | --- | --- | --- |
-| id | bigint(20) | NO | PRI |   |
+| id | bigint | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| class_id | bigint(20) | YES |   | 班级编号 |
-| seminar_id | bigint(20)| YES |   | 讨论课编号，与班级编号一起唯一确定一堂课 |
-| longitude | decimal | YES |   | 经度 |
-| latitude | decimal | YES |   | 纬度 |
+| class_id | bigint | YES |   | 班级编号 |
+| seminar_id | bigint| YES |   | 讨论课编号，与班级编号一起唯一确定一堂课 |
+| longitude | decimal(10, 6) | YES |   | 经度 |
+| latitude | decimal(10, 6) | YES |   | 纬度 |
 | status | tinyint unsigned | YES |    | 签到状态，0表示签到结束，1表示正在签到 |
 
 
