--- a/运用设计.md
+++ b/运用设计.md
@@ -165,7 +165,7 @@
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | seminar\_id | bigint unsigned | YES |   |   |
 | report\_grade | int unsigned | YES |   | 报告成绩 |
-| report | varchar(5000) | YES |   | 提交的报告 |
+| report | varchar(100) | YES |   | 提交的报告的url |
 | class_id | bigint unsigned | YES |   | 班级编号 |
 | leader | bigint unsigned | YES |   | 组长编号 |
 
