--- a/运用设计.md
+++ b/运用设计.md
@@ -48,21 +48,11 @@
 | end\_date | date | YES |   | 结束时间 |
 | teacher\_id | bigint unsigned | YES |   | 任课老师的id |
 | description | varchar(50) | YES |   | 课程介绍 |
-| score\_rule\_id | bigint unsigned | YES |   | 评分规则 |
-
-
-
-#### score\_rule表
-
-| 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
-| --- | --- | --- | --- | --- |
-| id | bigint unsigned | NO | PRI |   |
-| gmt\_create | datetime | YES |   | 表示记录创建时间 |
-| gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| report | tinyint unsigned | YES |   | 报告占期末比例 |
+| report_percentage | tinyint unsigned | YES |   | 报告占比 |
 | five\_point\_percentage | tinyint unsigned | YES |   | 5分占整体比例 |
 | four\_point\_percentage | tinyint unsigned | YES |   | 4分占整体比例 |
 | three\_point\_percentage | tinyint unsigned | YES |   | 3分占整体比例 |
+
 
 
 #### class­\_info表
@@ -76,7 +66,10 @@
 | course\_id | bigint unsigned | YES |   | 所属课程 |
 | site | varchar(255) | YES |   | 上课地点 |
 | class\_time | varchar(255) | YES |   | 上课时间 |
-| score\_rule\_id | bigint unsigned | YES |   | 评分规则 |
+| report_percentage | tinyint unsigned | YES |   | 报告占比 |
+| five\_point\_percentage | tinyint unsigned | YES |   | 5分占整体比例 |
+| four\_point\_percentage | tinyint unsigned | YES |   | 4分占整体比例 |
+| three\_point\_percentage | tinyint unsigned | YES |   | 3分占整体比例 |
 
 
 #### course\_selection表
@@ -139,7 +132,7 @@
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | class\_id | bigint unsigned | YES |   | 所属班级 |
-| leader | bigint | YES |   | 组长id |
+| leader_id | bigint | YES |   | 组长id |
 
 
 
@@ -152,7 +145,6 @@
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | fix\_group\_id | bigint unsigned | YES |   | 固定小组编号 |
 | student\_id | bigint unsigned | YES |   |   |
-| leader | bigint unsigned | YES |   | 队长 |
 
 
 
@@ -167,7 +159,7 @@
 | report\_grade | int unsigned | YES |   | 报告成绩 |
 | report | varchar(100) | YES |   | 提交的报告的url |
 | class_id | bigint unsigned | YES |   | 班级编号 |
-| leader | bigint unsigned | YES |   | 组长编号 |
+| leader_id | bigint unsigned | YES |   | 组长编号 |
 
 
 
@@ -180,7 +172,6 @@
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | seminar\_group\_id | bigint unsigned | YES |   | 课堂小组编号 |
 | student\_id | bigint unsigned | YES |   |   |
-| is\_leader | tinyint unsigned | YES |   | 是否为队长 |
 
 
 
