modify data dictionary

--- a/运用设计.md
+++ b/运用设计.md
@@ -9,7 +9,7 @@
 | id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| school\_name | varchar(20) | NO |   | 学校名称 |
+| name | varchar(20) | NO |   | 学校名称 |
 | province | varchar(10) | NO |   | 学校所在省份名称 |
 | city | varchar(10) | NO |   | 学校所在城市名称 |
 
@@ -22,16 +22,18 @@
 | id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| phone\_number | char(11) | NO |   |   |
+| phone | char(11) | NO |   |   |
 | wechat\_id | varchar(50) | YES |   |   |
-| icon | varchar(50) | YES |   | 头像 |
-| user\_password | varchar(16) | NO |   |   |
-| user\_name | varchar(10) | YES |   |   |
+| openid | varchar(50) | YES |   |   |
+| avatar | varchar(50) | YES |   | 头像 |
+| password | varchar(16) | NO |   |   |
+| name | varchar(30) | NO |   |   |
 | school\_id | bigint unsigned | YES |   | 所属学校的id |
-| is\_male | tinyint(1) unsigned | YES |   | 性别 |
-| is\_student | tinyint(1) unsigned | YES |   | 身份（老师，学生） |
+| gender | tinyint(1) unsigned | YES |   | 性别(0为男，1为女) |
+| type | tinyint(1) unsigned | YES |   | 身份（1为老师，0为学生） |
 | number | varchar(20) | YES |   | 教工号/学号 |
-| education | tinyint(1) unsigned | YES |   | 职称/学历 |
+| education | tinyint(1) unsigned | YES |   | 学历(1表示本科，2表示研究生，3表示博士) |
+| title | tinyint(1) unsigned | YES |   | 职称(1为教授，0为非教授) |
 | email | varchar(50) | YES |   |   |
 
 
@@ -43,12 +45,13 @@
 | id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| course\_name | varchar(30) | NO |   |   |
+| name | varchar(30) | NO |   |   |
 | start\_date | date | YES |   | 开始时间 |
 | end\_date | date | YES |   | 结束时间 |
 | teacher\_id | bigint unsigned | YES |   | 任课老师的id |
 | description | varchar(50) | YES |   | 课程介绍 |
-| report_percentage | tinyint unsigned | YES |   | 报告占比 |
+| report_percentage | tinyint unsigned | YES |   | 报告分占比 |
+| presentation_percentage | tinyint unsigned | YES |   | 展示分占比 |
 | five\_point\_percentage | tinyint unsigned | YES |   | 5分占整体比例 |
 | four\_point\_percentage | tinyint unsigned | YES |   | 4分占整体比例 |
 | three\_point\_percentage | tinyint unsigned | YES |   | 3分占整体比例 |
@@ -62,11 +65,12 @@
 | id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| class\_name | varchar(255) | NO |   |   |
+| name | varchar(255) | NO |   |   |
 | course\_id | bigint unsigned | YES |   | 所属课程 |
 | site | varchar(255) | YES |   | 上课地点 |
 | class\_time | varchar(255) | YES |   | 上课时间 |
 | report_percentage | tinyint unsigned | YES |   | 报告占比 |
+| presentation_percentage | tinyint unsigned | YES |   | 展示分占比 |
 | five\_point\_percentage | tinyint unsigned | YES |   | 5分占整体比例 |
 | four\_point\_percentage | tinyint unsigned | YES |   | 4分占整体比例 |
 | three\_point\_percentage | tinyint unsigned | YES |   | 3分占整体比例 |
@@ -93,7 +97,7 @@
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | student\_id | bigint unsigned | NO |   |   |
 | class\_id | bigint unsigned | NO |   |   |
-| attendance\_status | tinyint unsigned | YES |   | 点名状态 |
+| attendance\_status | tinyint unsigned | YES |   | 点名状态(0为正常，1为迟到，2为缺勤) |
 
 #### seminar表
 
@@ -102,10 +106,10 @@
 | id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| seminar\_name | varchar(300) | NO |   |   |
-| seminar\_description | varchar(5000) | YES |   | 讨论课描述 |
+| name | varchar(300) | NO |   |   |
+| description | varchar(5000) | YES |   | 讨论课描述 |
 | course\_id | bigint unsigned | YES |   | 所属课程 |
-| is\_fixed | tinyint unsigned | YES |   | 分组方式 |
+| is\_fixed | tinyint unsigned | YES |   | 分组方式(0为随机分组，1为固定分组) |
 | start\_time | date | NO |   |   |
 | end\_time | date | NO |   |   |
 
@@ -118,7 +122,7 @@
 | id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| topic\_name | varchar(300) | NO |   |   |
+| name | varchar(300) | NO |   |   |
 | description | varchar(5000) | YES |   | 话题详细描述 |
 | group\_number\_limit | tinyint unsigned | NO |   | 组数限制 |
 | group\_student\_limit | tinyint unsigned | NO |   | 组内人数限制 |
@@ -156,9 +160,11 @@
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | seminar\_id | bigint unsigned | YES |   |   |
-| report\_grade | int unsigned | YES |   | 报告成绩 |
-| report | varchar(100) | YES |   | 提交的报告的url |
 | class_id | bigint unsigned | YES |   | 班级编号 |
+| report | varchar(100) | YES |   | 提交的报告的url |
+| report\_grade | int unsigned | YES |   | 报告成绩 |
+| presentation\_grade | int unsigned | YES |   | 展示成绩 |
+| final\_grade | int unsigned | YES |   | 最终成绩 |
 | leader_id | bigint unsigned | YES |   | 组长编号 |
 
 
