add .net entities

--- a/运用设计.md
+++ b/运用设计.md
@@ -97,6 +97,7 @@
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | student\_id | bigint unsigned | NO |   |   |
 | class\_id | bigint unsigned | NO |   |   |
+| seminar\_id | bigint unsigned | NO |   |   |
 | attendance\_status | tinyint unsigned | YES |   | 点名状态(0为正常，1为迟到，2为缺勤) |
 
 #### seminar表
@@ -202,7 +203,7 @@
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | student\_id | bigint unsigned | YES |   |   |
-| seminar\_group\_topic | bigint unsigned | YES |   | 课堂小组话题 |
+| seminar\_group\_topic_id | bigint unsigned | YES |   | 课堂小组话题 |
 | grade | tinyint unsigned | YES |   | 成绩 |
 
 
