--- a/运用设计.md
+++ b/运用设计.md
@@ -221,6 +221,17 @@
 | latitude | decimal(10, 6) | YES |   | 纬度 |
 | status | tinyint unsigned | YES |    | 签到状态，0表示签到结束，1表示正在签到 |
 
+#### event表
+
+| 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
+| --- | --- | --- | --- | --- |
+| id | bigint | NO | PRI |   |
+| gmt\_create | datetime | YES |   | 表示记录创建时间 |
+| gmt\_modified | datetime | YES |   | 表示最近修改时间 |
+| bean | varchar(255) | YES |   | 方法名 |
+| parameter | varchar(255) | YES |   | 序列化为json的参数列表 |
+| time | datetime | YES |   | 执行时间 |
+
 
 
 ## 安全设计
