--- a/运用设计.md
+++ b/运用设计.md
@@ -228,9 +228,9 @@
 | id | bigint | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| bean | varchar(255) | YES |   | 方法名 |
+| bean_name | varchar(255) | YES |   | 类名 |
 | parameter | varchar(255) | YES |   | 序列化为json的参数列表 |
-| time | datetime | YES |   | 执行时间 |
+| method_name | datetime | YES |   | 方法名 |
 
 
 
