Revert "add fix_group_id to seminar_group"
This reverts commit 22cd464aa2cdf8cca68f0381970b19a2e3eb3862.

--- a/运用设计.md
+++ b/运用设计.md
@@ -167,7 +167,6 @@
 | presentation\_grade | int unsigned | YES |   | 展示成绩 |
 | final\_grade | int unsigned | YES |   | 最终成绩 |
 | leader_id | bigint unsigned | YES |   | 组长编号 |
-| fix_group_id | bigint unsigned | YES |   | 对应固定分组编号 |
 
 
 
@@ -231,7 +230,7 @@
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
 | bean_name | varchar(255) | YES |   | 类名 |
 | parameter | varchar(255) | YES |   | 序列化为json的参数列表 |
-| method_name | varchar(255) | YES |   | 方法名 |
+| method_name | datetime | YES |   | 方法名 |
 
 
 
