--- a/运用设计.md
+++ b/运用设计.md
@@ -232,6 +232,7 @@
 | bean_name | varchar(255) | YES |   | 类名 |
 | parameter | varchar(255) | YES |   | 序列化为json的参数列表 |
 | method_name | varchar(255) | YES |   | 方法名 |
+| time | datetime | YES |   | 时间 |
 
 
 
