--- a/运用设计.md
+++ b/运用设计.md
@@ -140,6 +140,17 @@
 | leader_id | bigint | YES |   | 组长id |
 
 
+#### fix\_group\_topic表
+
+| 字段名 | 数据类型（长度） | 允许为空 | 是否主键 | 注释 |
+| --- | --- | --- | --- | --- |
+| id | bigint | NO | PRI |   |
+| gmt\_create | datetime | YES |   | 表示记录创建时间 |
+| gmt\_modified | datetime | YES |   | 表示最近修改时间 |
+| topic\_id | bigint unsigned | YES |   | 所选择的话题id |
+| fix\_group\_id | bigint unsigned | YES |   | 固定小组编号 |
+
+
 
 #### fix\_group\_member表
 
@@ -167,7 +178,6 @@
 | presentation\_grade | int unsigned | YES |   | 展示成绩 |
 | final\_grade | int unsigned | YES |   | 最终成绩 |
 | leader_id | bigint unsigned | YES |   | 组长编号 |
-| fix_group_id | bigint unsigned | YES |   | 对应固定分组编号 |
 
 
 
