--- a/运用设计.md
+++ b/运用设计.md
@@ -123,7 +123,8 @@
 | id | bigint unsigned | NO | PRI |   |
 | gmt\_create | datetime | YES |   | 表示记录创建时间 |
 | gmt\_modified | datetime | YES |   | 表示最近修改时间 |
-| name | varchar(300) | NO |   |   |
+| serial | varchar(10) | YES |   |  序号 |
+| name | varchar(300) | YES |   |   |
 | description | varchar(5000) | YES |   | 话题详细描述 |
 | group\_number\_limit | tinyint unsigned | NO |   | 组数限制 |
 | group\_student\_limit | tinyint unsigned | NO |   | 组内人数限制 |
